[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/Player 2/fixed/walk 4 (2).PNG" type="Texture" id=1]
[ext_resource path="res://source/Test/Player2Test.gd" type="Script" id=2]
[ext_resource path="res://sprites/Player 2/fixed/walk 1 (2).PNG" type="Texture" id=3]
[ext_resource path="res://sprites/Player 2/fixed/walk 2 (2).PNG" type="Texture" id=4]
[ext_resource path="res://sprites/Player 2/fixed/Idle (2).PNG" type="Texture" id=5]
[ext_resource path="res://sprites/Player 2/fixed/Fall (2).PNG" type="Texture" id=6]
[ext_resource path="res://sprites/Player 2/fixed/Jump (2).PNG" type="Texture" id=7]
[ext_resource path="res://sprites/Player 2/fixed/Wall (2).PNG" type="Texture" id=8]
[ext_resource path="res://sprites/Player 2/fixed/walk 3 (2).PNG" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "wall",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "jump",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 71.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.5, 73 )

[node name="Player2" type="KinematicBody2D"]
position = Vector2( 29, -73 )
scale = Vector2( 0.866078, 0.501607 )
collision_mask = 8
script = ExtResource( 2 )
speed = 30
jump_power = 725
gravity = 25

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.30927, 0 )
scale = Vector2( 0.103707, 0.186468 )
frames = SubResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.125, 0.500107 )
shape = SubResource( 1 )

[node name="RightWallRaycast1" type="RayCast2D" parent="."]
position = Vector2( 13, 59 )
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 8

[node name="RightWallRaycast2" type="RayCast2D" parent="."]
position = Vector2( 14, -50 )
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 8

[node name="LeftWallRaycast1" type="RayCast2D" parent="."]
position = Vector2( -11, 59 )
enabled = true
cast_to = Vector2( -17, 0 )
collision_mask = 8

[node name="LeftWallRaycast2" type="RayCast2D" parent="."]
position = Vector2( -14, -50 )
enabled = true
cast_to = Vector2( -17, 0 )
collision_mask = 8

[node name="Enemy stomp" type="Area2D" parent="."]
position = Vector2( 0, 20 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy stomp"]
modulate = Color( 0, 0.180392, 1, 1 )
position = Vector2( 0.5, -21 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Enemy stomp" to="." method="_on_Enemy_stomp_area_entered"]
[connection signal="body_entered" from="Enemy stomp" to="." method="_on_Enemy_stomp_body_entered"]
